# value-ledger

./: .gitignore  INTEGRATION.md  MP-02-spec.md  README.md  cli.py  core.py  heuristics.py  integration.py  memory_vault_hook.py  pyproject.toml  specs.md
docs/: code-of-conduct.md  contributing.md  installation.md  specs-sheet.md  user-manual.md
tests/: __init__.py  test_compatibility.py  test_e2e_simulation.py  test_interruption.py  test_privacy.py  test_validation.py
value_ledger/: __init__.py  cli.py  compatibility.py  core.py  heuristics.py  integration.py  interruption.py  memory_vault_hook.py  natlangchain.py  privacy.py  receipt.py  synth_mind.py  validation.py
