[project]
name = "value-ledger"
version = "0.1.0"
description = "Evidentiary accounting layer for cognitive effort in Agent-OS"
authors = [{name = "kase1111-hash"}]
license = {text = "GPL-3.0-only"}
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pydantic>=2.0",
    "cryptography>=41.0",
]

[project.optional-dependencies]
dev = ["pytest", "black", "ruff"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
